Fix: hr in book cards now  align

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ video {
   display: flex;
   flex-direction: column;
   margin-bottom: 2rem;
+  height: 40%;
 }
 
 .book-title {
